Fixed: line alignment issue

--- a/src/blocks/timeline/style.scss
+++ b/src/blocks/timeline/style.scss
@@ -456,7 +456,7 @@ a.uagb-timeline__link {
      -ms-transform: translateX(-50%);
      transform: translateX(-50%);
 }
- .uagb-timeline__right .uagb-timeline__line {
+ .uagb-timeline__right-block .uagb-timeline__main .uagb-timeline__line {
      position: absolute;
      -webkit-transform: translateX(50%);
      -ms-transform: translateX(50%);
